--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,11 @@
                 <li><a href="{% url 'about' %}">О системе</a></li>
                 <li><a href="{% url 'contacts' %}">Контакты</a></li>
                 {% if  request.user.is_authenticated %}
-                    <li><a href="{% url 'profile_index' %}">Личный кабинет</a></li>
+                    {% if request.user.is_superuser %}
+                             <li><a href="{% url 'cp_users' %}">Личный кабинет</a></li>
+                        {% else %}
+                             <li><a href="{% url 'profile_index' %}">Личный кабинет</a></li>
+                        {% endif %}
                 {% endif %}
             </ul>
             {% if not request.user.is_authenticated %}
