--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -16,8 +16,8 @@
 				<div class="about-img" data-aos="fade" data-aos-duration="500" data-aos-once="true">
 					<img src="{% static 'img/about-img.svg' %}" alt="">
 				</div>
-				<p data-aos="fade-right" data-aos-duration="500" data-aos-once="true">UGS - это сервис по возмещению убытков игроков от проигрышей в ставках на спорт. Сервис является решением проблемы постоянного проигрыша игроков, которые играют на крупные суммы. </p>
-				<p data-aos="fade-right" data-aos-duration="500" data-aos-once="true">UGS работает максимально прозрачно и получает всего 10% по партнерскому соглашению, а проигравшему игроку возмещается половина проигранной ставки. </p>
+				<p data-aos="fade-right" data-aos-duration="500" data-aos-once="true">UGS - это сервис по возмещению убытков игроков от проигрышей в ставках на спорт. Сервис является решением проблемы постоянного проигрыша игроков, которые играют на крупные суммы.</p>
+				<p data-aos="fade-right" data-aos-duration="500" data-aos-once="true">UGS работает максимально прозрачно и получает до 10% по партнерскому соглашению, а проигравшему игроку возмещается до половины проигранной ставки.</p>
 				<p data-aos="fade-right" data-aos-duration="500" data-aos-once="true">Чтобы получить возмещение на нашей платформе в случае проигрыша ставки, нужно отсканировать чек ставки, загрузить его на нашу платформу и не переживать по поводу исходов спортивных событий.</p>
 			</div>
 		</div>
