--- a/templates/header.html
+++ b/templates/header.html
@@ -85,11 +85,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="input-block">
-                        <div class="input-block__wrap">
-                            <input type="text" id="phone_reg" required name="phone_reg" placeholder="Телефон">
-                        </div>
-                    </div>
+{#                    <div class="input-block">#}
+{#                        <div class="input-block__wrap">#}
+{#                            <input type="text" id="phone_reg" required name="phone_reg" placeholder="Телефон">#}
+{#                        </div>#}
+{#                    </div>#}
                     <div class="input-block">
                         <div class="input-block__wrap">
                             <input type="email" id="email_reg" required name="email" placeholder="Email">
