--- a/templates/basic.html
+++ b/templates/basic.html
@@ -19,6 +19,19 @@
     <meta name="msapplication-navbutton-color" content="#000">
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <style>
+        #team_input:disabled{
+            opacity: .8;
+            cursor: not-allowed;
+        }
+
+        .no_winner_label{
+
+            height: 60px !important;
+            display: flex !important;
+            align-items: center !important;
+            justify-content: center !important;
+        }
+
         /* Chrome, Safari, Edge, Opera */
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
@@ -158,7 +171,7 @@
                 'email':email_reg.value,
                 'first_name':first_name_reg.value,
                 'last_name':last_name_reg.value,
-                'phone':phone_reg.value,
+                //'phone':phone_reg.value,
                 'password1':password1_reg.value,
                 'password2':password2_reg.value
             }
