--- a/templates/cp/bet.html
+++ b/templates/cp/bet.html
@@ -15,6 +15,13 @@
                     <form action="" method="post">{% csrf_token %}
                         <h3 class="personalArea-title">Пользователь:<span>ID: {{ bet.user.id }} | <a href="{% url 'cp_user' bet.user.id %}">{{ bet.user.first_name }}{{ bet.user.last_name }}</a> </span></h3>
                         <h3 class="personalArea-title">Сумма ставки:<span>{{ bet.amount}} ₽</span></h3>
+                    {% if not bet.is_no_winner  %}
+                        <h3 class="personalArea-title">Ставка на команду:<span>{{ bet.team}}</span></h3>
+                    {% else %}
+                         <h3 class="personalArea-title">Ставка на:<span>НИЧЬЯ</span></h3>
+                    {% endif %}
+
+
                         <h3 class="personalArea-title">Дата:<span>{{ bet.created_at |date:'d.m.Y, H:i'}}</span></h3>
                         <h3 class="personalArea-title">Скриншот: <a target="_blank" href="{{ bet.image.url}}"><span>открыть</span></a></h3>
                         <h3 class="personalArea-title">Кешбек: <input class="admin-input" name="cb" type="number" value="{{ bet.cashback }}"> %</h3>
