--- a/templates/user/finances.html
+++ b/templates/user/finances.html
@@ -20,6 +20,8 @@
 				<div class="income">
 					<div class="income-img">
 						<div class="income-ico" id="statistics5"></div>
+						<div style="display: none" class="statistics-hidden" id="statistics5-5">{{ request.user.balance }}</div>
+						<div style="display: none" class="statistics-hidden" id="procent-5">1</div>
 					</div>
 					<div class="income-info">
 						<p>Тут вы можете пополнить баланс</p>
