--- a/templates/user/profile_index.html
+++ b/templates/user/profile_index.html
@@ -15,6 +15,8 @@
 				<div class="income">
 					<div class="income-img">
 						<div class="income-ico" id="statistics5"></div>
+						<div style="display: none" class="statistics-hidden" id="statistics5-5">{{ request.user.balance }}</div>
+						<div style="display: none" class="statistics-hidden" id="procent-5">1</div>
 					</div>
 					<div class="income-info">
 						<p>Узнай подробнее, как зарабатывать на <b>UGS</b></p>
