--- a/templates/header_profile.html
+++ b/templates/header_profile.html
@@ -95,7 +95,7 @@
 {#									</div>#}
 									<div class="private-block">
 										<p>Привязать карту</p>
-										<form action="{% url 'add_payment' %}" method="post">{% csrf_token %}
+										<form action="" method="post">{% csrf_token %}
 											<div class="private-form">
 												<div class="input-block">
 													<div class="input-block__wrap">
@@ -115,7 +115,7 @@
 									</div>
 									<div class="private-block">
 										<p>Привязать Яндекс кошелек</p>
-										<form action="{% url 'add_payment' %}" method="post">{% csrf_token %}
+										<form action="" method="post">{% csrf_token %}
 											<div class="private-form">
 												<div class="input-block">
 													<div class="input-block__wrap">
