--- a/templates/user/sidebar.html
+++ b/templates/user/sidebar.html
@@ -13,7 +13,8 @@
                 </a></li>
                 <li><a href="{% url 'cp_payments' %}" class="{{ profile_balance }}">Платежи
                 </a></li>
-
+                <li><a href="{% url 'cp_messages' %}">Сообщения
+                            </a></li>
                    <li><a href="{% url 'logout_page' %}">Выход
                 </a></li>
             </ul>
